@@ -1,5 +1,9 @@
 2004-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
+	* src/plot2d.c (print_table): Make the table terminal output two
+	blank lines at the end of each curve_points structure, to allow
+	selection of individual datasets via the 'index' option.
+
 	* docs/doc2texi.el (d2t-handle-html): Handle anchor-only <a> tags
 	more sensibly: output them to the texinfo file as a @c comment.
 	Patch from Shigharu Takeno.
